<resources>
    <string name="app_name">ScrumPoker</string>

    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPass">Repeat Password</string>
    <string name="email">Email</string>
    <string-array name="roles">
        <item>Regular User</item>
        <item>Administrator</item>
    </string-array>
    <string name="usernameCheck">Please fill in the username field!</string>
    <string name="emailCheck">Please fill in the email field!</string>
    <string name="passCheck">Please fill in the password field!</string>
    <string name="passLength">Password should be at least 6 characters long!</string>
    <string name="repeatCheck">The passwords do not match!</string>
    <string name="usernameUsed">The username is in use! Please choose another one!</string>
    <string name="congrats">Congratulations! You registered successfully!</string>
    <string name="fail">Oops! Something went wrong! Please try again!</string>


    <string name="login">Login</string>
    <string name="wrong">Wrong username or password!</string>

    <string name="groups">Groups</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="logout">Log out</string>

    <string name="join">Join Group</string>
    <string name="groupId">Group Code</string>
    <string name="successJoin">Successfully joined the group!</string>
    <string name="failJoin">Failed to join group! Please make sure that the code you introduced is correct!</string>

    <string name="add_question">Add Question</string>
    <string name="content">Question Content</string>
    <string name="expires">Expires: </string>
    <string name="pickDate">Pick Date</string>
    <string name="pickTime">Pick Time</string>
    <string name="cardTypes">Choose Card Types:</string>
    <string-array name="spinner_cards">
        <item>1,2,3,4,5,6,7,8,9</item>
        <item>1,2,3,5,8,13,20,40,100</item>
    </string-array>
    <string name="question_saved">Question saved successfully!</string>

    <string name="group_code">Group Code</string>
    <string name="active_msg">There is already an active question!</string>
    <string name="active_exists">If you activate this question the other one will be automatically unactivated. Proceed?</string>
    <string name="q_expired">It looks like this question has already expired! You cannot activate an expired question!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
